--- a/web-demo/package.json
+++ b/web-demo/package.json
@@ -6,7 +6,15 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "node server/index.js"
+  },
+  "dependencies": {
+    "@openai/agents": "^0.0.16",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "zod": "3.25.67"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
